Add CRUD operations to the Recipes, a new form to create/edit recipes and fix a few inconsistencies in the code.